--- a/flower_app/pubspec.yaml
+++ b/flower_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   image_picker_web: ^2.1.0
   http: ^1.3.0
+  http_parser: ^4.0.2
   path_provider: ^2.0.11
   provider: ^6.1.0
   # The following adds the Cupertino Icons font to your application.
