--- a/flower_app/.gitignore
+++ b/flower_app/.gitignore
@@ -43,3 +43,17 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Ignore Python virtual environment
+venv/
+
+# Ignore AI model files
+*.pth
+
+# Optional: Ignore build artifacts
+build/
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
